added documentation to .css files

--- a/help.html
+++ b/help.html
@@ -80,7 +80,7 @@
       </a>
     </div>
     <div class="buttonDivs">
-      <a id="button2" class="btn btn-default" href="AboutUs.html">
+      <a id="button2" class="btn btn-default" href="aboutUs.html">
         <img id="picFAQ" src="images/contactUs.jpg">
         <p>About Us</p>
       </a>
