Style changes on results page and added documentation

--- a/results.html
+++ b/results.html
@@ -82,10 +82,11 @@
           <button onclick="goBack()"><i class="fa fa-arrow-left" aria-hidden="true"></i><span
               id="full-screen-text">Re-Enter Locations</span></button>
         </div><br>
-        <p>From: <span id="start"></span></p><br>
-        <p>To: <span id="finish">BCIT</span></p><br>
-        <p>Distance: <span id="totalDistance"></span></p>
-        <p>Duration: <span id="totalDuration"></span></p>
+        
+        <p>From: <input id = "start" type = "text"></p>
+        <p>To: <input id = "finish" type = "text"></p><br>
+        <p>Distance: <input id = "totalDistance" type = "text"></p>
+        <p>Duration: <input id = "totalDuration" type = "text"></p>
         <!-- </div> -->
       </div>
     </div>
