changed input placeholder from pickup to Pickup.  Added media query to decrease size of about us image banner when moving to a smaller px size.

--- a/main.html
+++ b/main.html
@@ -81,7 +81,7 @@
 
     <!-- Origin and Destination Inputs-->
     <div id="elements">
-        <input id="origin-input" class="controls" type="text" placeholder="Enter a pickup location:" />
+        <input id="origin-input" class="controls" type="text" placeholder="Enter a Pickup location:" />
         <br>
         <input id="destination-input" class="controls" type="text" placeholder="Enter a Dropoff location:" />
         <br>
